Fixed background clipping and money fix

--- a/frontend_fortuna_v2/src/battlearena/BattleArena.css
+++ b/frontend_fortuna_v2/src/battlearena/BattleArena.css
@@ -162,3 +162,11 @@
     width: 300px;
     height: 300px;
 }
+
+.background-image {
+    background: url('/login_background.gif');
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
